--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     footer{margin-top:18px;color:var(--muted);font-size:13px}
     .top-right{margin-left:auto;text-align:right}
     .badge{background:rgba(255,255,255,0.03);padding:6px 10px;border-radius:8px;font-weight:600;display:inline-block}
-    .status{margin-top:6px;font-weight:600;color:#4ade80} /* hijau untuk status ON */
+    .status{margin-top:6px;font-weight:600;color:#ff0000} /* hijau untuk status ON */
     .codebox{background:#031022;padding:12px;border-radius:8px;border:1px solid rgba(255,255,255,0.03);font-family:monospace;font-size:13px;color:#cfe9ff;overflow:auto}
   </style>
 </head>
